# ekg

./: AGENTS.md  LICENSE  README.md  ekg_viewer.py  file_version_info.txt  main.py  playground.py  pyproject.toml  requirements.txt
arduino/ShieldEkgEmgDemo/: ShieldEkgEmgDemo.ino
olimex/: LICENSE  constants.py  exg.py
