[project]
name = "ecg"
version = "0.2.0"
description = "EKG Viewer for Teaching"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "contourpy==1.2.1",
    "cycler==0.12.1",
    "fonttools==4.51.0",
    "kiwisolver==1.4.5",
    "matplotlib==3.8.4",
    "numpy==1.26.4",
    "packaging==24.0",
    "pillow==10.3.0",
    "pip>=24.3.1",
    "pyparsing==3.1.2",
    "pyqtgraph>=0.13.7",
    "pyserial==3.5",
    "pyside6>=6.9.0",
    "python-dateutil==2.9.0.post0",
    "scipy==1.13.0",
    "six==1.16.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.11.1",
]
